--- a/DynamicBrain/EM_Connectomics_Question2-JW.ipynb
+++ b/DynamicBrain/EM_Connectomics_Question2-JW.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +102,15 @@
     "<div style=\"background: #DFF0D8; border-radius: 3px; padding: 10px;\">\n",
     "    <p><b> Task 2.2: </b> How many nuclei are there per root_id?\n",
     "        </div>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get all the nuclei that are neurons"
    ]
   },
   {
@@ -134,11 +143,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get all the nuclei that are neurons"
+    "nuc_neuron_table = client.materialize.query_table('nucleus_neuron_svm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'valid', 'classification_system', 'cell_type', 'pt_supervoxel_id',\n",
+       "       'pt_root_id', 'pt_position'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuc_neuron_table.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get all the nuclei that are neurons\n",
+    "nuc_neurons = client.materialize.query_table('nucleus_neuron_svm',\n",
+    "                                             filter_equal_dict={'cell_type':'neuron'})"
    ]
   },
   {
