--- a/PythonBootcamp/05_Introduction_To_Numpy.ipynb
+++ b/PythonBootcamp/05_Introduction_To_Numpy.ipynb
@@ -95,9 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[6, 2, 5, 4, 4, 6, 0, 9, 0, 1, 6, 3, 3, 9, 1],\n",
+       " [9, 2, 0, 3, 9, 5, 6, 5, 6, 7, 1, 3, 4, 7, 7],\n",
+       " [8, 6, 8, 3, 9, 4, 7, 4, 7, 1, 4, 1, 2, 4, 1],\n",
+       " [8, 6, 5, 7, 4, 5, 8, 2, 6, 8, 7, 4, 0, 6, 6],\n",
+       " [1, 7, 1, 9, 6, 6, 4, 2, 9, 6, 4, 8, 5, 9, 9],\n",
+       " [1, 8, 4, 8, 1, 3, 3, 0, 5, 5, 0, 9, 2, 5, 4],\n",
+       " [6, 6, 6, 3, 4, 6, 5, 4, 7, 7, 7, 6, 2, 4, 2],\n",
+       " [0, 8, 4, 8, 1, 0, 3, 1, 7, 7, 0, 7, 8, 3, 4],\n",
+       " [6, 0, 3, 3, 4, 7, 9, 2, 4, 5, 4, 7, 5, 9, 3],\n",
+       " [6, 9, 2, 3, 9, 6, 7, 1, 7, 9, 2, 0, 9, 0, 8]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -128,9 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.49129, 4.50255, 4.48127, 4.51168, 4.49771]\n"
+     ]
+    }
+   ],
    "source": [
     "# For each column, collect all values in the column and then compute the average.\n",
     "meanvals = []\n",
@@ -171,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,9 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4984695  0.50054155 0.50063424 0.50055014 0.50130724]\n"
+     ]
+    }
+   ],
    "source": [
     "data = np.random.random(size=(rows, cols))\n",
     "meanvals = data.mean(axis=0)\n",
@@ -208,9 +244,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# numpy arrays have a set number of dimensions:\n",
     "data.ndim"
@@ -218,9 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100000, 200)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# each dimension has a specific length\n",
     "data.shape"
@@ -228,9 +286,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The total number of items in this array (200 * 100k) is given by the size attribute\n",
     "data.size"
@@ -238,9 +307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160000000"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The array's memory usage is the number of items (200 * 100k)\n",
     "# times the number of bytes used by each item\n",
@@ -258,9 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# all items in the array share the same data type\n",
     "data.dtype"
@@ -305,9 +396,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "smaller_data = data.astype('float32')\n",
     "\n",
@@ -334,9 +436,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array from nested lists.\n",
     "list_data = [[1,2], [3,4], [5,6], [7,8]]\n",
@@ -346,9 +459,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 2)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# list_data is a list of length 4, \n",
     "# and each of its items is a nested list of length 2.\n",
@@ -528,11 +652,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0 4 6 3 5 0 1 8 0]\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "rand_arr = np.random.randint(0, 9, size=10)\n",
+    "new_arr = np.zeros(rand_arr.shape)\n",
+    "print(rand_arr)\n",
+    "print(new_arr)\n",
     "\n"
    ]
   },
@@ -562,9 +698,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7]\n",
+      "[2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# Start with a 1D array of integers 0 through 7\n",
     "arr5 = np.arange(8)\n",
@@ -639,9 +784,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute 'arrange'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [19]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marrange\u001b[49m(\u001b[38;5;241m10\u001b[39m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/numpy/__init__.py:313\u001b[0m, in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtesting\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Tester\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Tester\n\u001b[0;32m--> 313\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    314\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;18m__name__\u001b[39m, attr))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'arrange'"
+     ]
+    }
+   ],
    "source": []
   },
   {
@@ -657,9 +815,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  3  8 15 24 35 48 63]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a new array arr7 where each item is the product \n",
     "# of the corresponding items in arr5 and arr6\n",
@@ -669,9 +835,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 20]\n",
+      " [60 80]]\n"
+     ]
+    }
+   ],
    "source": [
     "# We can do the same with arrays of any dimension\n",
     "arr8 = np.array([[1, 2], [3, 4]])\n",
@@ -702,12 +877,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.1  0.2 ]\n",
+      " [0.15 0.2 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr8/arr9)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -773,13 +959,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "from matplotlib.pylab import plot\n"
+    "from matplotlib.pylab import plot\n",
+    "t = np.arange(1000) * 0.01"
    ]
   },
   {
@@ -1966,7 +2153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
